less/_country-mixin.less
.country-mixin(@primary, @bg-color){
	/*logo*/
	.icon-od-logo{
	  color: @primary!important;
	}

	[class^="icon-"], [class*=" icon-"]{ color: @bg-color;}

	a,
	a:visited,
	.map-sidebar a  {
		color: @primary;
		text-decoration: none;
	}

 	a:hover,
	.map-sidebar a:hover,
	a strong:hover {
		color: @bg-color;
	}

	.navigation {
		a.page-numbers{
			color: @bg-color;
			&:hover {
				color: @primary;
			}
		}
	} 

	button,
	a.button,
	.button {
		background: @bg-color;
	}

  a.button:hover{
    background: @primary;
  }

	#od-head {
		background: @bg-color;
		color: #f0f0f0;

		#main-nav {

			.menu ul > li:hover a,
			ul.menu > li:hover,
			ul.menu  > li  > ul.sub-menu > li:hover ,
			ul.menu  > li  > ul.sub-menu > li > ul.sub-menu > li a:hover {
				background: @bg-color;
			}

			ul li.current_page_item a {
				color: @primary;
				font-weight: bold;
			}
		}

		h1{
			color: @primary;
		}

		.notification-message-box a {
			color: #333;
		}

	}

	#od-selector{
		background: @bg-color;
		border-bottom: 1px solid @primary;

		a:hover {
			color: @primary;
		}
	}

	#od-menu{
		background: @bg-color;
	}

	.mapgroup-container .mapgroup .map-nav-container .map-nav li {

		a.active {
			background: @primary;
			border-color: @primary;

			&:after {
				border-bottom: 10px solid @primary;
			}
		}

	}

	#news.page-section .section-map .mapgroup-container .mapgroup .map-nav-container .map-nav li a.active:after {
		border-top: 10px solid @primary;
	}

	.interactive-map .interactive-map-layers {

		> ul >li {
			border-bottom: 1px solid @primary;
			a:hover{
				color: @primary;

			}

			> a.active {
				border-bottom: 1px solid @primary;
				color: @primary;
			}
		}

		.layer-item {
			&:hover .list-circle-o {
				border: 2px solid @primary;
			}

			.toggle-info i.active{
				color: @primary;
			}

			span:hover{
				color: @primary;
			}
		}
	}

	.color-line{
	  border: @primary solid 1px;
	  margin: 0 0 5px;
	  width: 99%;
	  height: 0;
	}

	.notification-message-box{
    border: 2px solid @primary;
    color: @bg-color;
	}

	.dataTables_wrapper .dataTables_paginate .paginate_button:hover{
		background: @bg-color!important;
	}

	/* Table data pages*/
	.sidebar_header{
	  background: @primary !important;
	}

	.sidebar_box_content ul li a{
	  color: @primary !important;
	}

	.top a{
	  color: @primary !important;
	}

	.top a:active{
	  color: @primary !important;
	}

	td.entry_title a{
	  color: @primary !important;
	}
	/* collapse & expend */

	#sidebar, .widget {
		.od-tax-widget-tax-item,
		.widgets .widget,
		.widget {
			.widget-title {
				color: @bg-color;
			}
		}

		.widgets .widget li a{
			color: @primary;

			.widgets .widget li a:hover{
				color: @bg-color;
			}
		}
	}

	.div-button{
	  background: @primary none repeat scroll 0% 0%;
	}

  #od-footer{
    background: @bg-color;
  }

  .wpckan_dataset_detail{

    h2 {
      color: @primary;
    }
  }

	.post-list-item .item-title {
		color: @primary;
		&:hover {
			color: @bg-color;
		}
	}
}

